--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "crypto-browserify": "^3.12.0",
+    "mongoose": "^8.1.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "rxjs": "~7.8.0",
